Fixes issue where quality selector labels get cut off

--- a/styles/moviq.less
+++ b/styles/moviq.less
@@ -200,6 +200,7 @@
                 }
 
                 &.moviq-btn-text {
+                    width: auto;
                     font-weight: 700;
 //                    font-size: .9em;
 //                    margin-top: .1em;
